--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,15 @@ environment:
   sdk: '>=2.18.5 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
+# To automatically upgradehome your package dependencies to the latest versions
+# consider running `flutter pub upgradehome --major-versions`. Alternatively,
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter_otp_text_field: ^1.1.1
+  country_codes: ^2.2.0
+  flutter_switch: ^0.3.2
   flutter:
     sdk: flutter
 
@@ -41,6 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl: ^0.16.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
